--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.App .container{
+  background-color: white;
+  padding: 12px 24px;
+  border-radius: 8px;
+  width: 500px;
+}
+.App .container .form-box{
+  padding: 4px 8px;
+}
+
+.App .container .form-box form{
+  display: flex;
+  gap: 10px;
+}
+
+.App .container .form-box input{
+  width: 450px;
+  height: 24px;
+  color: #111;
+  font-size: 16px;
+}
+.App .container .form-box input:focus{
+  outline: none;
+}
+
+.App .container .form-box button{
+  border: none;
+  font-weight: bold;
+  background-color: purple;
   color: white;
+  width: 50px;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.App .container .todo-list{
+  text-align: left;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.isDone {
+  text-decoration: line-through;
 }
